app/assets/stylesheets/application.scss
/*
* This is a manifest file that'll be compiled into application.css, which will include all the files
* listed below.
*
* Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
* vendor/assets/stylesheets directory can be referenced here using a relative path.
*
* You're free to add application-wide styles to this file and they'll appear at the bottom of the
* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
* files in this directory. Styles in this file should be added after the last require_* statement.
* It is generally better to create a new file per style scope.
*

*= require_self
*= require coming-soon

*/

/* https://mattboldt.com/organizing-css-and-sass-rails/
*/


/*!
* Start Bootstrap - Coming Soon v5.0.0 (https://startbootstrap.com/template-overviews/coming-soon)
* Copyright 2013-2018 Start Bootstrap
* Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-soon/blob/master/LICENSE)
*/

// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";

html {
 height: 100%;
}

body {
 height: 100%;
 min-height: 35rem;
 position: relative;
 font-family: 'Source Sans Pro';
 font-weight: 300;
}

h1,
h2,
h3,
h4,
h5,
h6 {
 font-family: 'Merriweather';
 font-weight: 700;
}

video {
 position: fixed;
 top: 50%;
 left: 50%;
 min-width: 100%;
 min-height: 100%;
 width: auto;
 height: auto;
 -webkit-transform: translateX(-50%) translateY(-50%);
 transform: translateX(-50%) translateY(-50%);
 z-index: 0;
}

@media (pointer: coarse) and (hover: none) {
 body {
   background: url("../images/bg-mobile-fallback.jpg") #586f56 no-repeat center center scroll;
   background-position: cover;
 }
 body video {
   display: none;
 }
}

.overlay {
 position: absolute;
 top: 0;
 left: 0;
 height: 100%;
 width: 100%;
 background-color: #cd9557;
 opacity: 0.7;
 z-index: 1;
}

.masthead {
 position: relative;
 overflow: hidden;
 padding-bottom: 3rem;
 z-index: 2;
}

.masthead .masthead-bg {
 position: absolute;
 top: 0;
 bottom: 0;
 right: 0;
 left: 0;
 width: 100%;
 min-height: 35rem;
 height: 100%;
 background-color: rgba(0, 46, 102, 0.8);
 -webkit-transform: skewY(4deg);
 transform: skewY(4deg);
 -webkit-transform-origin: bottom right;
 transform-origin: bottom right;
}

.masthead .masthead-content h1 {
 font-size: 2.5rem;
}

.masthead .masthead-content p {
 font-size: 1.2rem;
}

.masthead .masthead-content p strong {
 font-weight: 700;
}

.masthead .masthead-content .input-group-newsletter input {
 height: auto;
 font-size: 1rem;
 padding: 1rem;
}

.masthead .masthead-content .input-group-newsletter button {
 font-size: 0.8rem;
 font-weight: 700;
 text-transform: uppercase;
 letter-spacing: 1px;
 padding: 1rem;
}

@media (min-width: 768px) {
 .masthead {
   height: 100%;
   min-height: 0;
   width: 40.5rem;
   padding-bottom: 0;
 }
 .masthead .masthead-bg {
   min-height: 0;
   -webkit-transform: skewX(-8deg);
   transform: skewX(-8deg);
   -webkit-transform-origin: top right;
   transform-origin: top right;
 }
 .masthead .masthead-content {
   padding-left: 3rem;
   padding-right: 10rem;
 }
 .masthead .masthead-content h1 {
   font-size: 3.5rem;
 }
 .masthead .masthead-content p {
   font-size: 1.3rem;
 }
}

.social-icons {
 position: absolute;
 margin-bottom: 2rem;
 width: 100%;
 z-index: 2;
}

.social-icons ul {
 margin-top: 2rem;
 width: 100%;
 text-align: center;
}

.social-icons ul > li {
 margin-left: 1rem;
 margin-right: 1rem;
 display: inline-block;
}

.social-icons ul > li > a {
 display: block;
 color: white;
 background-color: rgba(0, 46, 102, 0.8);
 border-radius: 100%;
 font-size: 2rem;
 line-height: 4rem;
 height: 4rem;
 width: 4rem;
}

@media (min-width: 768px) {
 .social-icons {
   margin: 0;
   position: absolute;
   right: 2.5rem;
   bottom: 2rem;
   width: auto;
 }
 .social-icons ul {
   margin-top: 0;
   width: auto;
 }
 .social-icons ul > li {
   display: block;
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 2rem;
 }
 .social-icons ul > li:last-child {
   margin-bottom: 0;
 }
 .social-icons ul > li > a {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   font-size: 2rem;
   line-height: 4rem;
   height: 4rem;
   width: 4rem;
 }
 .social-icons ul > li > a:hover {
   background-color: #002E66;
 }
}

.btn-secondary {
 background-color: #cd9557;
 border-color: #cd9557;
}

.btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
 background-color: #ba7c37 !important;
 border-color: #ba7c37 !important;
}

.input {
 font-weight: 300 !important;
}


.alert-danger {
  color: red;
  padding: 0;
  margin: 0;
  margin-bottom: 0;
}

ul {
  margin: 0;
}

// margin of text section from the top, higher perccent means lower
.staticTop {
  margin-top: 10%
}
// margin of text section from the top, higher perccent means lower
.staticTopMobile {
  margin-top: 1%
}


// for errors
.alert-dismissible {
  padding-right: 4rem !important;
}
.alert {
  position: relative !important;
  padding: 0.75rem 1.25rem !important;
  margin-bottom: 1rem !important;
  border: 1px solid transparent !important;
  border-radius: 0.25rem !important;
}

